# trace-cpu

./: .clangd  .gitignore  CMakeLists.txt  Makefile
src/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  BlinnPhongMaterial.cpp  BlinnPhongMaterial.h  Camera.cpp  Camera.h  CpuTracer.cpp  CpuTracer.h  DiffuseLightMaterial.cpp  DiffuseLightMaterial.h  DiffuseMaterial.cpp  DiffuseMaterial.h  Geometry.cpp  Geometry.h  Intersection.h  Light.h  Log.cpp  Log.h  Material.h  Mesh.cpp  Mesh.h  ObjModel.cpp  ObjModel.h  Object.cpp  Object.h  PointLight.cpp  PointLight.h  Progress.cpp  Progress.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Raytracer.cpp  Raytracer.h  Renderer.cpp  Renderer.h  Scene.cpp  (+25 more)
